src/test/deca/syntax/invalid/provided/RightOperandMissing.deca
// DESCRIPTIION: Opération binaire sans LeftOperand
// RESULTAT:
{
  a = true ||  ;
}
